@@ -1,4 +1,6 @@
 master
+-Mayhem
+  Fix support of change in 4chan's HTML about hidden filename in case of spoiler.
 
 2.34.5
 - Mayhem
